# openpi-wr

deployment/: README.md  benchmark_pi05_onnx_trt.py  build_tensorrt_engine_pi05.py  export_onnx_pi05_pytorch.py
deployment/deploy_cpp/: CMakeLists.txt  README.md  build_engine_trt1010.sh  run_pi05_trt_cpp.sh
deployment/deploy_cpp/src/: main.cpp
deployment/distill/: DISTILL_PIPELINE_SUMMARY.md  distill.py
examples/: training.ipynb
src/openpi/models_pytorch/: gemma_pytorch.py  pi0_pytorch.py
